--- a/src/app/components/shared/article-grid/article-grid.component.html
+++ b/src/app/components/shared/article-grid/article-grid.component.html
@@ -2,7 +2,7 @@
   <ng-container matColumnDef="publishedAt">
     <th mat-header-cell *matHeaderCellDef>Published At</th>
     <td mat-cell *matCellDef="let article">
-      {{ article.publishedAt | dateFormat }}
+      {{ article.publishedAt | formatDate }}
     </td>
   </ng-container>
 
