Ajustados principalmente estilos para que se vuelva a ver bien

--- a/src/app/components/articles/article-big-card/article-big-card.component.html
+++ b/src/app/components/articles/article-big-card/article-big-card.component.html
@@ -1,5 +1,5 @@
 <div class="container button-container-right">
-  <button mat-raised-button color="basic" (click)="goBack()">
+  <button mat-raised-button color="basic" (click)="goBack()" class="tright">
     Back to List
   </button>
 </div>
