--- a/src/app/components/articles/article-list/article-list.component.html
+++ b/src/app/components/articles/article-list/article-list.component.html
@@ -20,6 +20,7 @@
 
     <div *ngIf="!modeTable && articles.length" class="card-container">
       <app-article-card
+        class="card"
         *ngFor="let article of articles"
         [article]="article"
         (articleClicked)="goToDetail($event)"
