--- a/src/app/components/articles/article-list/article-list.component.html
+++ b/src/app/components/articles/article-list/article-list.component.html
@@ -1,10 +1,18 @@
 <div class="container">
   <div class="button-row">
     <button mat-raised-button color="basic" (click)="modeTable = true">
-      <mat-icon class="mat-icon-right">table_chart</mat-icon>
+      <img
+        class="icon-svg"
+        src="./../../../../assets/images/ico-table.svg"
+        alt="Table"
+      />
     </button>
     <button mat-raised-button color="basic" (click)="modeTable = false">
-      <mat-icon class="mat-icon-right">view_module</mat-icon>
+      <img
+        class="icon-svg"
+        src="./../../../../assets/images/ico-cards.svg"
+        alt="Cards"
+      />
     </button>
   </div>
 </div>
