--- a/src/app/components/shared/article-grid/article-grid.component.html
+++ b/src/app/components/shared/article-grid/article-grid.component.html
@@ -1,4 +1,9 @@
-<table mat-table [dataSource]="articles" class="mat-elevation-z8 table">
+<table
+  mat-table
+  [dataSource]="articles"
+  class="mat-elevation-z8 table"
+  @tableRowsAnimation
+>
   <ng-container matColumnDef="publishedAt">
     <th mat-header-cell *matHeaderCellDef>Published At</th>
     <td mat-cell *matCellDef="let article">
@@ -18,6 +23,7 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr
+    class="table__row"
     mat-row
     *matRowDef="let row; columns: displayedColumns"
     (click)="onRowClick(row)"
